--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ github:
   repository_url: "https://github.com/pages-themes/primer"
   
 title: Whiteson Research Lab 
-description: Univeristy of Oxford 
+description: University of Oxford 
